--- a/Website/assets/css/main.css
+++ b/Website/assets/css/main.css
@@ -1848,7 +1848,7 @@
 					height: 100%;
 					opacity: 1.0;
 					z-index: 1;
-					opacity: 0.8;
+					opacity: 0.9;
 				}
 
 				.tiles article > .image:after {
@@ -1939,27 +1939,27 @@
 					}
 
 			.tiles article.style1 > .image:before {
-				background-color: #c27ce2;
+				background-color: #073457;
 			}
 
 			.tiles article.style2 > .image:before {
-				background-color: #7ecaf6;
+				background-color: #055674;
 			}
 
 			.tiles article.style3 > .image:before {
-				background-color: #5eb2d1;
+				background-color: #1B669D;
 			}
 
 			.tiles article.style4 > .image:before {
-				background-color: #b15abc;
+				background-color: #277FB0;
 			}
 
 			.tiles article.style5 > .image:before {
-				background-color: #ae85ca;
+				background-color: #76A9D4;
 			}
 
 			.tiles article.style6 > .image:before {
-				background-color: #8499e7;
+				background-color: #B8D3F1;
 			}
 
 			body:not(.is-touch) .tiles article:hover > .image {
@@ -3068,7 +3068,7 @@
 	}
 
 	#header {
-		background: #444;
+		background: #073457;
 		color: #bbb;
 		cursor: default;
 		height: 3.25em;
