--- a/Website/assets/css/main.css
+++ b/Website/assets/css/main.css
@@ -3303,7 +3303,7 @@
 	#banner {
 		background-attachment: scroll,							fixed;
 		background-color: #666;
-		background-image: url("images/overlay.png"), url("../../images/finalpic_1.JPG");
+		background-image: url("images/overlay.png"), url("../../images/IMG_3372.jpg");
 		background-position: top left,						center center;
 		background-repeat: repeat,							no-repeat;
 		background-size: auto,							cover;
